// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Choose Your Twinroom page Component should render ChooseTwinroomPageCCUI 1`] = `
<div>
  <div
    data-testid="ChooseTwinroomPage"
  />
</div>
`;

exports[`Choose Your Twinroom page getLayout should wrap page with SecondaryHDPLayout and ErrorBoundary 1`] = `
<div>
  <div
    data-testid="SecondaryHDPLayout"
  >
    <div
      data-testid="ErrorBoundary"
    >
      <div
        data-testid="ChooseTwinroomPage"
      />
    </div>
  </div>
</div>
`;
